test/langtools/tools/javac/enum/FauxEnum3.preview.out
FauxEnum3.java:11:8: compiler.err.cant.inherit.from.sealed: SpecializedEnum
1 error